// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      GA
      <span
        className="value"
      >
        G3, P10
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <span
          className="text-center header"
        >
          Generations
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={3}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={1}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
        <span
          className="text-center header"
        >
          Population
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={10}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={2}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      GA
      <span
        className="value"
      >
        G2, P10
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <span
          className="text-center header"
        >
          Generations
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={2}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={1}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
        <span
          className="text-center header"
        >
          Population
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={10}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={2}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;

exports[`should render correctly 3`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      GA
      <span
        className="value"
      >
        G2, P9
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <span
          className="text-center header"
        >
          Generations
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={2}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={1}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
        <span
          className="text-center header"
        >
          Population
        </span>
        <div
          className="control"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={9}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={2}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;
